[package]
name = "up-transport-iceoryx2-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
up-rust = "0.5"
iceoryx2 = "0.6.1"
async-trait = "0.1"
protobuf = "3.7.2"
bytes = "1.10.1"
tokio = { version = "1", features = ["full"] }
test-case = "3"
log = "0.4.27"
env_logger = "0.11.8"
once_cell = "1.18.0"
uuid = { version = "1", features = ["v4"] }


[dev-dependencies]
up-rust = { version = "0.5.0", features = ["test-util"] }
